--- a/livros-angular/src/app/app.component.html
+++ b/livros-angular/src/app/app.component.html
@@ -334,3 +334,16 @@
 
 
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Livros Angular</a>
+  <ul class="navbar-nav mr-auto">
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/lista">Lista de Livros</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/dados">Dados do Livro</a>
+    </li>
+  </ul>
+</nav>
+
+
