--- a/livros-angular/src/app/livro-dados/livro-dados.component.html
+++ b/livros-angular/src/app/livro-dados/livro-dados.component.html
@@ -1,1 +1,25 @@
-<p>livro-dados works!</p>
+<main>
+    <h1>Incluir Livro</h1>
+    <form (submit)="incluir()" ngNativeValidate>
+      <div class="form-group">
+        <label for="titulo">Título:</label>
+        <input type="text" class="form-control" id="titulo" name="titulo" [(ngModel)]="livro.titulo" required>
+      </div>
+      <div class="form-group">
+        <label for="resumo">Resumo:</label>
+        <textarea class="form-control" id="resumo" name="resumo" rows="3" [(ngModel)]="livro.resumo"></textarea>
+      </div>
+      <div class="form-group">
+        <label for="editora">Editora:</label>
+        <select class="form-control" id="editora" name="editora" [(ngModel)]="livro.codEditora" required>
+          <option *ngFor="let editora of editoras" [value]="editora.codEditora">{{ editora.nome }}</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="autores">Autores:</label>
+        <textarea class="form-control" id="autores" name="autores" rows="3" [(ngModel)]="autoresForm"></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary">Incluir</button>
+    </form>
+  </main>
+  
